[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/SafeSpot/SafeSpot.tres" type="Texture" id=1]
[ext_resource path="res://Areas/SafePlace.gd" type="Script" id=2]

[sub_resource type="TileSet" id=1]
0/name = "SafeSpot.tres 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/Fonts/Eighty-Four.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 4 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="SafePlace" type="Area2D"]
collision_mask = 0
script = ExtResource( 2 )
wait_time = 16

[node name="SafePad" type="CollisionShape2D" parent="."]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 16.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -25.0
margin_right = 121.0
theme = SubResource( 3 )
bbcode_enabled = true
visible_characters = 13

[connection signal="body_entered" from="." to="." method="_on_SafePlace_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SafePlace_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
